2006-04-16 Scott Dattalo <scott@dattalo.com>
	* modules/binary_indicator.cc,h: removed from gpsim. This module
	did absolutely nothing.
	* modules/gpsim_modules.cc, modules/Makefile.am: removed
	references to the binary_indicator.

2006-04-16 Scott Dattalo <scott@dattalo.com>
	* modules/ttl.cc: TTLbase now calls initializeAttributes(). This
	defines xpos and ypos attributes.
	* regression/ttl/ttl377.asm: xpos and ypos are initialized by the
	builtin script.
	* modules/led.cc, modules/led.h: Redesigned I/O pins to remove
	references to the deprecated IOPORT class.
	* modules/gpsim_modules.cc: Place Led classes in their own
	namespace.
	

2006-04-16 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in: fixed bug [ 1470012 ] Breakpoints regression
	  test crashes mingw gpsim
	* modules/makefile.mingw, modules/modules.vcproj: WIN32 sync

2006-04-16 Scott Dattalo <scott@dattalo.com>
	* modules/gpsim_modules.cc, modules/Makefile.am, modules/ttl.cc,
	modules/ttl.h: Began a TTL module. Right now it contains only a
	'377.
	* regression/run_regression.sh, regression/ttl/18f452.lkr,
	regression/ttl/Makefile, regression/ttl/ttl377.asm: Regression
	test for the newly added '377 module in the ttl library.
	* src/modules.h, src/modules.cc, gpsim_object.cc: Modules can now
	be constructed with a name and a description.
	
2006-04-15 Scott Dattalo <scott@dattalo.com>
	* regression/switch_test/switch_test.asm: corrected 'capacitance'

2006-04-15 Borut Razem <borut.razem@siol.net>
	* cli/cli.vcproj, cli/makefile.mingw: added define YYSTACK_USE_ALLOCA
	* src/a2dconverter.*: svn:keywords=Author Date Id Revision,
	  svn:eol-style=native
	* src/a2dconverter.cc: corrected include path to "../config.h"
	* regression/switch_test/switch_test.stc: corected 'capacitance'

2006-04-15 Scott Dattalo <scott@dattalo.com>
	* src/16bit-registers.h, src/16bit-processors.cc,
	  src/16bit-registers.cc, src/16bit-processors.h, src/p18x.cc,
	  src/a2dconverter.cc: