@@ -21,7 +21,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../plat/win32;&quot;../../glib/include/glib-2.0&quot;;&quot;../../glib/lib/glib-2.0/include&quot;;&quot;../../gtk+/include/gtk-2.0&quot;;&quot;../../gtk+/lib/gtk-2.0/include&quot;;&quot;../../pango/include/pango-1.0&quot;;../.."
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;IN_MODULE;HAVE_READLINE;HAVE_GUI;HAVE_NSCLEAN_READLINE;READLINE_STATIC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;IN_MODULE;HAVE_GUI;HAVE_READLINE;HAVE_NSCLEAN_READLINE;READLINE_STATIC"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -64,7 +64,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../plat/win32;&quot;../../glib/include/glib-2.0&quot;;&quot;../../glib/lib/glib-2.0/include&quot;;&quot;../../gtk+/include/gtk-2.0&quot;;&quot;../../gtk+/lib/gtk-2.0/include&quot;;&quot;../../pango/include/pango-1.0&quot;;../.."
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;IN_MODULE;HAVE_READLINE;HAVE_GUI;HAVE_NSCLEAN_READLINE;READLINE_STATIC"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;IN_MODULE;HAVE_GUI;HAVE_READLINE;HAVE_NSCLEAN_READLINE;READLINE_STATIC"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
