@@ -31,7 +31,7 @@ EXPORTS
     ??0LiteralInteger@@QAE@PAVInteger@@@Z
     ??0LiteralString@@QAE@PAVString@@@Z
     ??0LiteralSymbol@@QAE@PAVValue@@@Z
-    ??0Module@@QAE@XZ
+    ??0Module@@QAE@PBD0@Z
     ??0OpAdd@@QAE@PAVExpression@@0@Z
     ??0OpAddressOf@@QAE@PAVExpression@@@Z
     ??0OpAbstractRange@@QAE@PAVExpression@@0@Z
@@ -58,6 +58,7 @@ EXPORTS
     ??0OpXor@@QAE@PAVExpression@@0@Z
     ??0PCTraceObject@@QAE@PAVProcessor@@I@Z
     ??0PCTraceType@@QAE@PAVProcessor@@II@Z
+    ??0Package@@QAE@I@Z
     ??0Packet@@QAE@II@Z
     ??0PinModule@@QAE@PAVPortModule@@IPAVIOPIN@@@Z
     ??0PortRegister@@QAE@II@Z
@@ -213,6 +214,7 @@ EXPORTS
     ?assertValid@Integer@@SAPAV1@PAVValue@@V?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@_J@Z
     ?assertValid@Integer@@SAPAV1@PAVValue@@V?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@_J2@Z
     ?assign_pin@Module@@UAEXIPAVIOPIN@@@Z
+    ?assign_pin@Package@@QAEXIPAVIOPIN@@@Z
     ?assign_xref@ProgramMemoryAccess@@QAEXIPAX@Z
     ?attach@IOPIN@@UAEXPAVStimulus_Node@@@Z
     ?attach_to_port@IOPIN@@QAEXPAVIOPORT@@I@Z
@@ -266,7 +268,7 @@ EXPORTS
     ?Debug@Processor@@UAEXXZ
     ?debug@AliasedInstruction@@UAEXXZ
     ?decode@instruction@@QAEXPAVProcessor@@I@Z
-	?description@gpsimObject@@UAE?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@XZ
+    ?description@gpsimObject@@UAE?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@XZ
     ?destroyProgramMemoryAccess@Processor@@UAEXPAVProgramMemoryAccess@@@Z
     ?detach_stimulus@Stimulus_Node@@QAEXPAVstimulus@@@Z
     ?detach@stimulus@@UAEXPAVStimulus_Node@@@Z
@@ -556,7 +558,7 @@ EXPORTS
     ?set_cpu@MemoryAccess@@UAEXPAVProcessor@@@Z
     ?set_cpu@gpsimValue@@UAEXPAVProcessor@@@Z
     ?set_cycle_break@Breakpoints@@QAEHPAVProcessor@@_KPAVTriggerObject@@@Z
-	?set_description@gpsimObject@@QAEXPBD@Z
+    ?set_description@gpsimObject@@QAEXPBD@Z
     ?set_execution_break@Breakpoints@@QAEHPAVProcessor@@IPAVExpression@@@Z
     ?set_expression@Breakpoints@@QAE_NIPAVExpression@@@Z
     ?set_Expression@TriggerObject@@UAEXPAVExpression@@@Z
