@@ -1,3 +1,9 @@
+2006-04-17 Borut Razem <borut.razem@siol.net>
+	* config_win32.h.in: added the explanation why the warning is good:
+	  warning: `I' flag used with `%x' printf format
+	* cli/cli.vcproj, modules.vcproj, modules/makefile.mingw,
+	  plat/win32/libgpsim.def: WIN32 sync
+
 2006-04-16 Scott Dattalo <scott@dattalo.com>
 	* modules/binary_indicator.cc,h: removed from gpsim. This module
 	did absolutely nothing.
@@ -13,7 +19,6 @@
 	references to the deprecated IOPORT class.
 	* modules/gpsim_modules.cc: Place Led classes in their own
 	namespace.
-	
 
 2006-04-16 Borut Razem <borut.razem@siol.net>
 	* config_win32.h.in: fixed bug [ 1470012 ] Breakpoints regression
